Ensure map controls visible on mobile

--- a/nycommons/static/css/legend.less
+++ b/nycommons/static/css/legend.less
@@ -115,7 +115,7 @@
 
     @media (max-width: @screen-xs-max) {
         &.sidebar-section {
-            height: 160px;
+            height: @mobile-legend-height;
             margin-top: 0;
             padding: 10px;
         }
@@ -154,7 +154,7 @@
         visibility: visible;
 
         @media (max-width: @screen-xs-max) {
-            height: 45px;
+            height: @mobile-legend-height-collapsed;
             overflow: hidden;
         }
 
