--- a/nycommons/static/css/variables.less
+++ b/nycommons/static/css/variables.less
@@ -43,3 +43,6 @@
 @footer-color: @light-gray;
 
 @header-bar-height: 25px;
+
+@mobile-legend-height: 160px;
+@mobile-legend-height-collapsed: 45px;
